# computional-math-labs

lab1/: main.py
second-semester/lab1/: CMakeLists.txt  main.cpp
second-semester/lab3/: main.cpp
second-semester/lab3-nastya/: CMakeLists.txt  main.cpp
second-semester/nastya/: CMakeLists.txt  dmatrix.h  main.cpp
second-semester/nastya/dmatrix/: dmatrix.cpp
